# computing-Korean-STT-error-rates

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  asr_metrics.py  pyproject.toml  requirements.txt  setup.py  test_er.py
.github/: pull_request_template.md
.github/scripts/: check_release_policy.py
.github/workflows/: pr-release-policy.yml  publish-to-pypi.yml  test.yml
nlptutti/: __init__.py  asr_metrics.py  entity_metrics.py
test/: nlptest.py  test_entity_reference_implementations.py  test_er.py  test_evaluate_entities.py  test_make_keyword_pattern.py  test_public_api_v12.py
test/fixtures/: entity_reference_implementations.json
