[build-system]
requires = ["setuptools<68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlptutti"
version = "0.0.0.10"
description = "Korean STT (Speech-to-Text) error rate calculation package"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "hyeonsangjeon", email = "wungnut0310@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["STT", "ASR", "Korean", "NLP", "CER", "WER", "speech recognition"]
dependencies = [
    "jiwer",
    "pandas",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/hyeonsangjeon/computing-Korean-STT-error-rates"
Repository = "https://github.com/hyeonsangjeon/computing-Korean-STT-error-rates"
Documentation = "https://github.com/hyeonsangjeon/computing-Korean-STT-error-rates#readme"
"Bug Tracker" = "https://github.com/hyeonsangjeon/computing-Korean-STT-error-rates/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nlptutti*"]
exclude = ["test*", "pic*"]

[tool.setuptools.package-data]
nlptutti = ["*.txt", "*.md"]